--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -41,10 +41,20 @@
               <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
             </svg>
           </span>
+          <span class="sidebar-text">Portal</span>
+        </a>
+      </li>
+      <li class="nav-item {% if 'dashboard' in segment %}active{% endif %} mt-5">
+        <a href="{% url 'dashboard' %}" class="nav-link">
+          <span class="sidebar-icon">
+            <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+              <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path>
+              <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
+            </svg>
+          </span>
           <span class="sidebar-text">Dashboard</span>
         </a>
       </li>
-
       {% admin_get_menu as app_list %}
       {% if app_list %}
         {% for app in app_list %}
