--- a/templates/pages/dashboard/dashboard.html
+++ b/templates/pages/dashboard/dashboard.html
@@ -3,10 +3,11 @@
 {% load admin_volt %}
 {% block content %}
 <div class="container text-center">
-    <h1>Dashboard - Today's Shifts</h1>
-    
+    <h1><b><small>Dashboard - Time Clock</small></b></h1>
+    <hr/>
+    <div class="card shadow p-3">
     <h2>Currently Working</h2>
-    {% if current_employees %}
+    {% if current_employees or current_managers %}
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
@@ -16,9 +17,22 @@
                 </tr>
             </thead>
             <tbody>
+                {% for entry in current_managers %}
+                    <tr>
+                        <td><a href="{% url 'weekly_hours' entry.manager.user.id %}">{{ entry.manager.first_name }} {{ entry.manager.last_name }}</a></td>
+                        <td>{{ entry.clock_in|date:"H:i a" }}</td>
+                        <td>
+                            {% with entry.clock_in as clock_in_time %}
+                                {% if clock_in_time %}
+                                    {{ entry.duration|floatformat:2 }}
+                                {% endif %}
+                            {% endwith %}
+                        </td>
+                    </tr>
+                {% endfor %}
                 {% for entry in current_employees %}
                     <tr>
-                        <td>{{ entry.employee.first_name }} {{ entry.employee.last_name }}</td>
+                        <td><a href="{% url 'weekly_hours' entry.employee.user.id %}">{{ entry.employee.first_name }} {{ entry.employee.last_name }}</a></td>
                         <td>{{ entry.clock_in|date:"H:i a" }}</td>
                         <td>
                             {% with entry.clock_in as clock_in_time %}
@@ -36,7 +50,7 @@
     {% endif %}
     
     <h2>Finished Shifts</h2>
-    {% if finished_shifts %}
+    {% if finished_shifts or finished_managers %}
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
@@ -47,12 +61,20 @@
                 </tr>
             </thead>
             <tbody>
+                {% for entry in finished_managers %}
+                    <tr>
+                        <td><a href="{% url 'weekly_hours' entry.manager.user.id %}">{{ entry.manager.first_name }} {{ entry.manager.last_name }}</a></td>
+                        <td>{{ entry.clock_in|date:"h:i a" }}</td>
+                        <td>{{ entry.clock_out|date:"h:i a" }}</td>
+                        <td>{{ entry.total_hours|floatformat:2 }}</td>
+                    </tr>
+                {% endfor %}
                 {% for entry in finished_shifts %}
                     <tr>
-                        <td>{{ entry.employee.first_name }} {{ entry.employee.last_name }}</td>
-                        <td>{{ entry.clock_in|date:"H:i a" }}</td>
-                        <td>{{ entry.clock_out|date:"H:i a" }}</td>
-                        <td>{{ entry.total_hours }}</td>
+                        <td><a href="{% url 'weekly_hours' entry.employee.user.id %}">{{ entry.employee.first_name }} {{ entry.employee.last_name }}</a></td>
+                        <td>{{ entry.clock_in|date:"h:i a" }}</td>
+                        <td>{{ entry.clock_out|date:"h:i a" }}</td>
+                        <td>{{ entry.total_hours|floatformat:2 }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -60,5 +82,6 @@
     {% else %}
         <p>No completed shifts for today.</p>
     {% endif %}
+</div>
 </div>
 {% endblock %}
