--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -11,7 +11,7 @@
             aria-expanded="false">
             <div class="media d-flex align-items-center">
               <img class="avatar rounded-circle" alt="Image placeholder"
-                src="{% static 'assets/img/team/profile-picture-4.jpg' %}">
+                src="{% static 'assets/img/team/pngegg.png' %}">
               <div class="media-body ms-2 text-dark align-items-center d-none d-lg-block">
                 <span class="mb-0 font-small fw-bold text-gray-900">{{ request.user.username}}</span>
               </div>
