--- a/templates/clock_in_out.html
+++ b/templates/clock_in_out.html
@@ -10,8 +10,13 @@
         {% if not time_entry %}
         <button type="submit" name="action" value="clock_in" class="btn btn-success">Clock In</button>
         {% else %}
-        <p>{{ employee.first_name }} clocked in at {{ time_entry.clock_in|time:"H:i A" }}</p>
+        {% if not time_entry.clock_out %}
+        <p>{{ employee.first_name }} clocked in at {{ time_entry.clock_in|time:"h:i a" }}</p>
         <button type="submit" name="action" value="clock_out" class="btn btn-danger">Clock Out</button>
+        {% else %}
+        <p>{{ employee.first_name }} worked from {{ time_entry.clock_in|time:"h:i a" }} to {{ time_entry.clock_out|time:"h:1 a" }}</p>
+        <button type="submit" name="action" value="clock_in" class="btn btn-success">Clock In</button>
+        {% endif %}
         {% endif %}
     </form>
 </div>
