added graph and fixed timezones

--- a/templates/pages/dashboard/dashboard.html
+++ b/templates/pages/dashboard/dashboard.html
@@ -3,7 +3,7 @@
 {% load admin_volt %}
 {% block content %}
 <div class="container text-center">
-    <h1><b><small>Dashboard - Time Clock</small></b></h1>
+    <h1><b><small>Dashboard - {{ today }}</small></b></h1>
     <hr/>
     <div class="card shadow p-3">
     <h2>Currently Working</h2>
