--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -44,7 +44,7 @@
           <span class="sidebar-text">Portal</span>
         </a>
       </li>
-      <li class="nav-item {% if 'dashboard' in segment %}active{% endif %} mb-5">
+      <li class="nav-item {% if 'dashboard' in segment %}active{% endif %}">
         <a href="{% url 'dashboard' %}" class="nav-link">
           <span class="sidebar-icon">
             <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -54,6 +54,19 @@
           </span>
           <span class="sidebar-text">Dashboard</span>
         </a>
+      </li>
+      <li class="nav-items mb-5 {% if 'dashboard' in segment %}active{% endif %}">
+        <span>
+          <a href="{% url 'report_labor' %}" class="nav-link">
+            <span class="sidebar-icon">
+              <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path>
+                <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
+              </svg>
+            </span>
+            <span class="sidebar-text">Labor Report</span>
+          </a>
+        </span>
       </li>
       <li class="nav-item">
         <span class="sidebar-text">Models</span>
