--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 {% block content %}
 <div class="container text-center">
-    <h2>Enter PIN</h2>
+    <h2 style="text-shadow:1px 1px 0px #000000;">Enter PIN</h2>
     <form id="pinForm" method="post" action="{% url 'enter_pin' %}">
         {% csrf_token %}
         <div id="pin-display">
