--- a/templates/pages/dashboard/dashboard.html
+++ b/templates/pages/dashboard/dashboard.html
@@ -6,10 +6,10 @@
 {% endblock extrahead %}
 {% block content %}
 <div class="container text-center">
-    <h1><b><small>Dashboard - {{ today }}</small></b></h1>
+    <h1><b><small style="text-shadow:1px 1px 0px #000000;">Dashboard - {{ today|date:'D, M d' }}</small></b></h1>
     <hr/>
     <div class="card shadow p-3">
-    <h2>Currently Working</h2>
+    <h2 style="text-shadow:1px 1px 0px #000000;">Currently Working</h2>
     {% if current_employees or current_managers %}
         <table class="table table-striped table-bordered">
             <thead>
@@ -52,7 +52,7 @@
         <p>No employees are currently clocked in.</p>
     {% endif %}
     
-    <h2 class="mt-3">Finished Shifts</h2>
+    <h2 class="mt-3" style="text-shadow:1px 1px 0px #000000;">Finished Shifts</h2>
     {% if finished_shifts or finished_managers %}
         <table class="table table-striped table-bordered">
             <thead>
@@ -89,7 +89,7 @@
 </div>
 <div class="container mt-3">
 <div class="card shadow text-center h-auto">
-    <h2>Sales for Today</h2>
+    <h2 style="text-shadow:1px 1px 0px #000000;">Sales for Today</h2>
     <canvas id="hourlySalesChart" width="400" height="200"></canvas>
 </div>
 </div>
